--- a/style.css
+++ b/style.css
@@ -35,3 +35,66 @@ p {
     font-family: "Roboto", sans-serif;
     margin: 0;
 }
+
+/***********************   Style of main section  *****************************/
+.main {
+    height: 100vh;
+    width: 100%;
+    background-image: url('img/sunny.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-sizing: border-box;
+    padding: 90px;
+    position: relative;
+}
+
+
+/***********************   Style of header   *****************************/
+header {
+    position: absolute;
+    background-color: transparent;
+    left: 0;
+    top: 0;
+    right: 0;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding: 0px 100px;
+}
+
+h1 {
+    font-size: 55px;
+    font-weight: 600;
+    color: white;
+}
+
+.search {
+    width: 250px;
+    height: 55px;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.search img {
+    height: 30px;
+    width: 30px;
+    object-fit: cover;
+    position: absolute;
+    left: 5px;
+    top: 12px;
+}
+
+.search input {
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    font-size: 19px;
+    color: rgb(52, 52, 52);
+    box-shadow: 0px 2px 10px 10px rgba(0, 0, 0, 0.3);
+    padding: 12px 12px 12px 35px;
+    box-sizing: border-box;
+}
