--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ p {
     box-sizing: border-box;
     padding: 90px;
     position: relative;
+    display: flex;
+    align-items: center;
+    gap: 60px;
+    flex-shrink: initial;
 }
 
 
@@ -56,12 +60,11 @@ header {
     left: 0;
     top: 0;
     right: 0;
-    height: 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
-    padding: 0px 100px;
+    padding: 40px 100px;
 }
 
 h1 {
@@ -95,6 +98,17 @@ h1 {
     font-size: 19px;
     color: rgb(52, 52, 52);
     box-shadow: 0px 2px 10px 10px rgba(0, 0, 0, 0.3);
-    padding: 12px 12px 12px 35px;
+    padding: 12px 12px 12px 40px;
     box-sizing: border-box;
+}
+
+/**************************   Style of main card   *****************************/
+
+.card-container {
+    height: 550px;
+    width: 500px;
+    background-color: transparent;
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
+    flex-shrink:inherit;
 }
