--- a/style.css
+++ b/style.css
@@ -107,8 +107,52 @@ h1 {
 .card-container {
     height: 550px;
     width: 500px;
+    box-sizing: border-box;
+    padding: 32px;
     background-color: transparent;
     backdrop-filter: blur(10px);
     border-radius: 20px;
-    flex-shrink:inherit;
+}
+
+.card-content {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.temperature {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 35px;
+    width: 100%;
+}
+
+.temperature img {
+    height: 80px;
+    width: 80px;
+    object-fit: cover;
+}
+
+.temp {
+    color: white;
+    font-size: 35px;
+    font-weight: 600;
+}
+
+.city {
+    color: white;
+    font-size: 21px;
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+.date-time {
+    display: flex;
+    gap: 40px;
+    color: white;
+    font-weight: 500;
+    font-size: 18px;
 }
