--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ h1 {
     height: 80px;
     width: 80px;
     object-fit: cover;
+    border-radius: 20px;
 }
 
 .temp {
@@ -155,4 +156,61 @@ h1 {
     color: white;
     font-weight: 500;
     font-size: 18px;
+}
+
+.wind-humidity {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 35px;
+}
+
+.wind-humidity div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 9px;
+    box-sizing: border-box;
+    padding: 10px;
+    color: #ffffffb8;
+    border-radius: 10px;
+    width: calc(100%/2);
+}
+
+.blue {
+    background-color: rgb(35, 35, 244);
+}
+
+.green {
+    background-color: rgb(9, 164, 9);
+}
+
+.fs-20 {
+    font-size: 20px;
+    font-weight: 600;
+    color: white;
+}
+
+.fs-17 {
+    font-size: 17px;
+    font-weight: 400;
+    color: white;
+}
+
+.index {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding: 12px;
+    border-bottom: 1px solid white;
+}
+
+.weather {
+    display: flex;
+    justify-content: center;
+    color: #ffffffb8;
+    font-size: 35px;
+    font-weight: 700;
 }
