--- a/style.css
+++ b/style.css
@@ -46,10 +46,7 @@ p {
     box-sizing: border-box;
     padding: 90px;
     position: relative;
-    display: flex;
-    align-items: center;
-    gap: 60px;
-    flex-shrink: initial;
+
 }
 
 
@@ -102,10 +99,18 @@ h1 {
     box-sizing: border-box;
 }
 
+/**************************   Syle of main content cards  ***********************/
+.main-content-cards {
+    display: flex;
+    gap: 60px;
+    margin-top: 60px;
+}
+
 /**************************   Style of main card   *****************************/
 
 .card-container {
     width: 500px;
+    height: fit-content;
     box-sizing: border-box;
     padding: 32px;
     background-color: transparent;
@@ -212,4 +217,50 @@ h1 {
     color: #ffffffb8;
     font-size: 35px;
     font-weight: 700;
+}
+
+/***************************************  Style of forecast cards  *****************************/
+.forecast-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    width: 700px;
+    height: 700px;
+}
+
+.fore-card {
+    height:fit-content;
+    width: 200px;
+    box-sizing: border-box;
+    padding: 15px;
+    background-color: transparent;
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+}
+
+h4 {
+    margin: 0;
+    font-size: 25px;
+    font-weight: 700;
+    padding-bottom: 10px;
+    border-bottom: 1px solid white;
+    text-align: center;
+    width: 100%;
+}
+
+#forecastIcon {
+    height: 80px;
+    width: 80px;
+    object-fit: cover;
+    margin-top: 20px;
+}
+
+.fore-temp {
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 14px;
 }
