--- a/style.css
+++ b/style.css
@@ -82,8 +82,9 @@ h1 {
     width: 30px;
     object-fit: cover;
     position: absolute;
-    left: 5px;
+    right: 10px;
     top: 12px;
+    cursor: pointer;
 }
 
 .search input {
@@ -95,7 +96,7 @@ h1 {
     font-size: 19px;
     color: rgb(52, 52, 52);
     box-shadow: 0px 2px 10px 10px rgba(0, 0, 0, 0.3);
-    padding: 12px 12px 12px 40px;
+    padding: 12px;
     box-sizing: border-box;
 }
 
